--- a/CharacterManager.WebMVC/Views/Character/Details.cshtml
+++ b/CharacterManager.WebMVC/Views/Character/Details.cshtml
@@ -45,6 +45,7 @@
     </dl>
 </div>
 <p>
+    @Html.ActionLink("Journal", "Index", "Journal", new { Model.CharacterId }, null) |
     @Html.ActionLink("Edit", "Edit", new { id = Model.CharacterId }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
