Create journal error

--- a/CharacterManager.WebMVC/Views/Character/Details.cshtml
+++ b/CharacterManager.WebMVC/Views/Character/Details.cshtml
@@ -46,6 +46,6 @@
 </div>
 <p>
     @Html.ActionLink("Journal", "Index", "Journal", new { Model.CharacterId }, null) |
-    @Html.ActionLink("Edit", "Edit", new { id = Model.CharacterId }) |
+    @Html.ActionLink("Edit", "Edit", new { Model.CharacterId }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
