Refactored Models folder structure

--- a/CharacterManager.WebMVC/Views/Character/Create.cshtml
+++ b/CharacterManager.WebMVC/Views/Character/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model CharacterManager.Models.CharacterCreate
+﻿@model CharacterManager.Models.CharacterModels.CharacterCreate
 
 @{
     ViewBag.Title = "Create";
