--- a/CharacterManager.WebMVC/Views/Character/Delete.cshtml
+++ b/CharacterManager.WebMVC/Views/Character/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model CharacterManager.Models.CharacterDetail
+﻿@model CharacterManager.Models.CharacterModels.CharacterDetail
 
 @{
     ViewBag.Title = "Delete";
