--- a/CharacterManager.WebMVC/Views/Character/Edit.cshtml
+++ b/CharacterManager.WebMVC/Views/Character/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model CharacterManager.Models.CharacterEdit
+﻿@model CharacterManager.Models.CharacterModels.CharacterEdit
 
 @{
     ViewBag.Title = "Edit";
