--- a/CharacterManager.WebMVC/Views/Character/Index.cshtml
+++ b/CharacterManager.WebMVC/Views/Character/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<CharacterManager.Models.CharacterListItem>
+﻿@model IEnumerable<CharacterManager.Models.CharacterModels.CharacterListItem>
 
 @{
     ViewBag.Title = "Index";
