--- a/CharacterManager.WebMVC/Views/Journal/Create.cshtml
+++ b/CharacterManager.WebMVC/Views/Journal/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model CharacterManager.Models.JournalCreate
+﻿@model CharacterManager.Models.JournalModels.JournalCreate
 
 @{
     ViewBag.Title = "Create";
