--- a/CharacterManager.WebMVC/Views/Journal/Delete.cshtml
+++ b/CharacterManager.WebMVC/Views/Journal/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@model CharacterManager.Models.JournalDetail
+﻿@model CharacterManager.Models.JournalModels.JournalDetail
 
 @{
     ViewBag.Title = "Delete";
