--- a/CharacterManager.WebMVC/Views/Journal/Edit.cshtml
+++ b/CharacterManager.WebMVC/Views/Journal/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model CharacterManager.Models.JournalEdit
+﻿@model CharacterManager.Models.JournalModels.JournalEdit
 
 @{
     ViewBag.Title = "Edit";
