--- a/CharacterManager.WebMVC/Views/Journal/Index.cshtml
+++ b/CharacterManager.WebMVC/Views/Journal/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<CharacterManager.Models.JournalListItem>
+﻿@model IEnumerable<CharacterManager.Models.JournalModels.JournalListItem>
 
 @{
     ViewBag.Title = "Index";
