--- a/CharacterManager.WebMVC/Views/Journal/Details.cshtml
+++ b/CharacterManager.WebMVC/Views/Journal/Details.cshtml
@@ -47,5 +47,5 @@
 </div>
 <p>
     @Html.ActionLink("Edit", "Edit", new { id = Model.JournalId }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "Index", new { id = Model.CharacterId })
 </p>
