--- a/CharacterManager.WebMVC/Views/Journal/Index.cshtml
+++ b/CharacterManager.WebMVC/Views/Journal/Index.cshtml
@@ -7,7 +7,8 @@
 <h2>@ViewBag.CharacterName's Journal Entries</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create", new { id = Request.Url.Segments.Last() })
+    @Html.ActionLink("Create New", "Create", new { id = Request.Url.Segments.Last() }) | 
+    @Html.ActionLink("Go Back", "Details", "Character", new { id = Request.Url.Segments.Last() }, null)
 </p>
 
 @if (TempData.ContainsKey("SaveResult"))
