--- a/CharacterManager.WebMVC/Content/Site.css
+++ b/CharacterManager.WebMVC/Content/Site.css
@@ -1,14 +1,12 @@
 ﻿body {
     padding-top: 50px;
     padding-bottom: 20px;
+    font-family: 'Lato', sans-serif;
 }
 
-/* Set padding to keep content from hitting the edges */
-.body-content {
-    padding-left: 15px;
-    padding-right: 15px;
+h1, h2, h3 {
+    font-family: 'Sawarabi Mincho', sans-serif;
 }
-
 /* Override the default bootstrap behavior where horizontal description lists 
    will truncate terms that are too long to fit in the left column 
 */
@@ -21,4 +19,35 @@ input,
 select,
 textarea {
     max-width: 280px;
+}
+
+.btn {
+    border-radius: 0;
+    margin-right: 1%;
+}
+
+.jumbotron {
+    background: url(Images/DnD_Starter_Art.jpg) center no-repeat;
+    background-size: cover;
+}
+
+.jumbotron h1, .jumbotron p {
+    display: inline-block;
+    color: #eee;
+    background-color: rgba(0,0,0,0.6);
+    padding: 1%;
+}
+
+.col-md-4 h2 {
+    text-align: center;
+}
+
+.col-md-4 p {
+    font-size: 1.1em;
+}
+
+#features {
+    text-align: center;
+    margin-bottom: 2%;
+    font-size: 3em;
 }
