Made jumbotron fullscreen on homepage

--- a/CharacterManager.WebMVC/Views/Shared/_Layout.cshtml
+++ b/CharacterManager.WebMVC/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@using CharacterManager.WebMVC.Helpers
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
@@ -29,7 +30,27 @@
             </div>
         </div>
     </div>
-    <div class="body-content">
+    @{
+            string name = Html.CurrentViewName();
+            string controller = Html.CurrentController();
+            if (name == "Index" && controller == "HomeController")
+            {
+            <div class="jumbotron">
+                <div class="container">
+                    <h1>D&amp;D Character Manager</h1>
+                    <p class="lead">Keep track of your character sheets, inventory items, and journal entries.</p>
+                    @if (!User.Identity.IsAuthenticated)
+        {
+                        <div>
+                            @Html.ActionLink("Log In", "Login", "Account", null, new { @class = "btn btn-default" })
+                            @Html.ActionLink("Register", "Register", "Account", null, new { @class = "btn btn-danger" })
+                        </div>
+                    }
+                </div>
+            </div>
+        }
+    }
+    <div class="container body-content">
         @RenderBody()
         <hr />
         <footer>
