--- a/CharacterManager.WebMVC/Views/Home/About.cshtml
+++ b/CharacterManager.WebMVC/Views/Home/About.cshtml
@@ -4,4 +4,4 @@
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>Use this app to keep track of your characters information, as well as their individual journals, and inventories.</p>
