Added properties to views, added links

--- a/CharacterManager.WebMVC/Views/Character/Details.cshtml
+++ b/CharacterManager.WebMVC/Views/Character/Details.cshtml
@@ -41,6 +41,54 @@
             @Html.DisplayFor(model => model.CharacterClass)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.Alignment)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Alignment)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.HitPoints)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.HitPoints)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.PersonalityTraits)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.PersonalityTraits)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Ideals)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Ideals)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Bonds)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Bonds)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Flaws)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Flaws)
+        </dd>
+
     </dl>
 </div>
 <p>
