--- a/CharacterManager.WebMVC/Views/Journal/Create.cshtml
+++ b/CharacterManager.WebMVC/Views/Journal/Create.cshtml
@@ -44,7 +44,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "Index", new { id = Model.CharacterId })
 </div>
 
 @section Scripts {
