--- a/CharacterManager.WebMVC/Views/Character/Create.cshtml
+++ b/CharacterManager.WebMVC/Views/Character/Create.cshtml
@@ -16,7 +16,7 @@
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     <div class="form-group">
-        @Html.LabelFor(model => model.CharacterName, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.CharacterName, "Name*", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.CharacterName, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.CharacterName, "", new { @class = "text-danger" })
@@ -24,7 +24,7 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.CharacterRace, "Race", htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.CharacterRace, "Race*", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EnumDropDownListFor(x => x.CharacterRace, htmlAttributes: new { @class = "form-control" })
             @Html.ValidationMessageFor(model => model.CharacterRace, "", new { @class = "text-danger" })
@@ -32,7 +32,7 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.CharacterGender, "Gender", htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.CharacterGender, "Gender*", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EnumDropDownListFor(x => x.CharacterGender, htmlAttributes: new { @class = "form-control" })
             @Html.ValidationMessageFor(model => model.CharacterGender, "", new { @class = "text-danger" })
@@ -40,7 +40,7 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.CharacterClass, "Class", htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.CharacterClass, "Class*", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EnumDropDownListFor(x => x.CharacterClass, htmlAttributes: new { @class = "form-control" })
             @Html.ValidationMessageFor(model => model.CharacterClass, "", new { @class = "text-danger" })
@@ -48,7 +48,7 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.Alignment, "Alignment", htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.Alignment, "Alignment*", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EnumDropDownListFor(x => x.Alignment, htmlAttributes: new { @class = "form-control" })
             @Html.ValidationMessageFor(model => model.Alignment, "", new { @class = "text-danger" })
@@ -56,7 +56,7 @@
     </div>
 
     <div class="form-group">
-        @Html.LabelFor(model => model.HitPoints, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.HitPoints, "Hit Points*", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.HitPoints, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.HitPoints, "", new { @class = "text-danger" })
