--- a/CharacterManager.WebMVC/Views/Character/Details.cshtml
+++ b/CharacterManager.WebMVC/Views/Character/Details.cshtml
@@ -95,5 +95,6 @@
     @Html.ActionLink("Journal", "Index", "Journal", new { id = Model.CharacterId }, null) |
     @Html.ActionLink("Inventory", "Index", "Inventory", new { id = Model.CharacterId }, null) |
     @Html.ActionLink("Edit", "Edit", new { id = Model.CharacterId }) |
+    @Html.ActionLink("Delete", "Delete", new { id = Model.CharacterId }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
