--- a/CharacterManager.WebMVC/Views/Inventory/Index.cshtml
+++ b/CharacterManager.WebMVC/Views/Inventory/Index.cshtml
@@ -5,7 +5,7 @@
 }
 
 <p>
-    @Html.ActionLink("Create New", "Create", new { id = Request.Url.Segments.Last() }) |
+    @Html.ActionLink("New Item", "Create", new { id = Request.Url.Segments.Last() }) |
     @Html.ActionLink("Go Back", "Details", "Character", new { id = Request.Url.Segments.Last() }, null) |
     @Html.ActionLink("Back to Characters", "Index", "Character")
 </p>
